--- a/models/ronin.html
+++ b/models/ronin.html
@@ -4,69 +4,52 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TVS Ronin | Tirumala TVS</title>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;500;700&family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
-    <nav class="navbar">
-        <div class="container nav-content">
+    <header class="main-header">
+        <div class="container header-top">
             <a href="../index.html" class="logo">Tirumala <span>TVS</span></a>
-            <div class="menu-toggle" onclick="toggleMenu()"><span class="bar"></span><span class="bar"></span><span class="bar"></span></div>
-            <div class="nav-links" id="navMenu">
-                <a href="../index.html">Home</a>
-                <a href="../models.html">Inventory</a>
-                <a href="../index.html#contact" class="btn-nav-contact">Contact Us</a>
-            </div>
+            <div class="header-btn-group"><a href="../index.html#contact" class="btn-header">Get Quote</a></div>
         </div>
-    </nav>
+        <div class="nav-bar">
+            <div class="container"><ul class="nav-menu"><li class="nav-item"><a href="../index.html">Home</a></li><li class="nav-item"><a href="../models.html">Inventory</a></li><li class="nav-item"><a href="../index.html#contact">Contact</a></li></ul></div>
+        </div>
+    </header>
 
     <div class="model-hero">
         <div class="hero-text-side">
-            <span class="model-tag" style="background:#333;">UNSCRIPTED LIFE</span>
+            <span class="model-tag">UNSCRIPTED LIFE</span>
             <h1 class="model-title">TVS Ronin</h1>
-            <p class="section-subtitle">Modern-Retro Scrambler. Built for the city, ready for the highway.</p>
-            <div class="model-price">₹ 1,49,000* <br><span>(Starting Ex-Showroom)</span></div>
-            <div style="display: flex; gap: 15px; flex-wrap: wrap;">
-                <a href="https://wa.me/919964946512?text=Book%20Test%20Ride%20Ronin" class="btn btn-primary">Book Test Ride 🏍️</a>
+            <p style="font-size: 1.1rem; color: #555;">Modern-Retro Scrambler. Built for the city, ready for the highway.</p>
+            <div class="model-price">₹ 1,49,000* <br><span>(Ex-Showroom Price)</span></div>
+            <div style="display: flex; gap: 15px;">
+                <a href="../index.html#contact" class="btn btn-primary">Book Test Ride 📅</a>
+                <a href="https://wa.me/919964946512?text=Quote%20Ronin" class="btn btn-whatsapp">WhatsApp 💬</a>
             </div>
         </div>
-        <div class="hero-img-side">
-            <img src="../assets/ronin.jpg" alt="TVS Ronin" onerror="this.src='https://placehold.co/800x600?text=TVS+Ronin'">
-        </div>
+        <div class="hero-img-side"><img src="../assets/ronin.jpg" alt="Ronin" onerror="this.src='https://placehold.co/800x600?text=Ronin'"></div>
     </div>
 
-    <div class="spec-bar-dark">
-        <div class="spec-bar-grid">
-            <div class="dark-spec-item"><h4>225cc</h4><p>Engine</p></div>
-            <div class="dark-spec-item"><h4>20.4</h4><p>PS Power</p></div>
-            <div class="dark-spec-item"><h4>ABS</h4><p>Dual Channel</p></div>
-            <div class="dark-spec-item"><h4>USD</h4><p>Front Forks</p></div>
-        </div>
+    <div class="spec-grid">
+        <div class="spec-box"><h3>225.9 cc</h3><p>Engine</p></div>
+        <div class="spec-box"><h3>20.4 PS</h3><p>Power</p></div>
+        <div class="spec-box"><h3>Dual Ch</h3><p>ABS</p></div>
+        <div class="spec-box"><h3>USD</h3><p>Front Forks</p></div>
     </div>
 
-    <div class="feature-section container">
-        <div class="feature-row">
-            <div class="feature-txt">
-                <h3>Unique T-Face Pilot Lamp</h3>
-                <p>Signature design that sets you apart. The modern retro LED setup ensures you are seen, day or night.</p>
+    <section class="info-section bg-light">
+        <div class="container">
+            <div class="section-header text-center" style="margin-bottom:50px;"><h2>Key Features</h2></div>
+            <div class="info-grid">
+                <div class="feature-card"><h4>Offset Speedometer</h4><p>Uniquely positioned digital pod with Bluetooth connectivity and voice assist.</p></div>
+                <div class="feature-card"><h4>T-Face Pilot Lamp</h4><p>Signature modern-retro LED setup that ensures you are seen, day or night.</p></div>
+                <div class="feature-card"><h4>Block Tread Tyres</h4><p>Special purpose tyres designed for both city roads and off-road trails.</p></div>
             </div>
-            <div class="feature-img"><img src="../assets/ronin_light.jpg" alt="Ronin Light" onerror="this.src='https://placehold.co/600x400?text=T-Face+Lamp'"></div>
         </div>
-        <div class="feature-row">
-            <div class="feature-txt">
-                <h3>Offset Speedometer</h3>
-                <p>A uniquely positioned digital pod with Bluetooth connectivity, voice assist, and turn-by-turn navigation.</p>
-            </div>
-            <div class="feature-img"><img src="../assets/ronin_speedo.jpg" alt="Ronin Speedometer" onerror="this.src='https://placehold.co/600x400?text=Offset+Speedometer'"></div>
-        </div>
-    </div>
-    
-    <div class="section-padding bg-light text-center">
-        <h2 style="margin-bottom: 20px;">Live Unscripted</h2>
-        <a href="https://wa.me/919964946512?text=Get%20Quote%20Ronin" class="btn btn-whatsapp">Get On-Road Price 💬</a>
-    </div>
+    </section>
 
     <footer class="footer"><div class="container text-center"><p>&copy; 2025 Tirumala TVS.</p></div></footer>
-    <script>function toggleMenu() { document.getElementById("navMenu").classList.toggle("active"); }</script>
 </body>
 </html>
