--- a/models/jupiter113.html
+++ b/models/jupiter113.html
@@ -3,70 +3,53 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>New TVS Jupiter 110 | Tirumala TVS</title>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
+    <title>New Jupiter 110 | Tirumala TVS</title>
+    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;500;700&family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
-    <nav class="navbar">
-        <div class="container nav-content">
+    <header class="main-header">
+        <div class="container header-top">
             <a href="../index.html" class="logo">Tirumala <span>TVS</span></a>
-            <div class="menu-toggle" onclick="toggleMenu()"><span class="bar"></span><span class="bar"></span><span class="bar"></span></div>
-            <div class="nav-links" id="navMenu">
-                <a href="../index.html">Home</a>
-                <a href="../models.html">Inventory</a>
-                <a href="../index.html#contact" class="btn-nav-contact">Contact Us</a>
-            </div>
+            <div class="header-btn-group"><a href="../index.html#contact" class="btn-header">Get Quote</a></div>
         </div>
-    </nav>
+        <div class="nav-bar">
+            <div class="container"><ul class="nav-menu"><li class="nav-item"><a href="../index.html">Home</a></li><li class="nav-item"><a href="../models.html">Inventory</a></li><li class="nav-item"><a href="../index.html#contact">Contact</a></li></ul></div>
+        </div>
+    </header>
 
     <div class="model-hero">
         <div class="hero-text-side">
-            <span class="model-tag" style="background: var(--primary);">ZYADA SE BHI ZYADA</span>
+            <span class="model-tag">ZYADA SE BHI ZYADA</span>
             <h1 class="model-title">New Jupiter 110</h1>
-            <p class="section-subtitle">Now with Next-Gen iGO Assist technology for instant power boost and better mileage.</p>
-            <div class="model-price">₹ 73,700* <br><span>(Starting Ex-Showroom)</span></div>
-            <div style="display: flex; gap: 15px; flex-wrap: wrap;">
-                <a href="https://wa.me/919964946512?text=Book%20Test%20Ride%20Jupiter" class="btn btn-primary">Book Test Ride 🛵</a>
+            <p style="font-size: 1.1rem; color: #555;">India's most loved scooter now with Next-Gen iGO Assist technology.</p>
+            <div class="model-price">₹ 73,700* <br><span>(Ex-Showroom Price)</span></div>
+            <div style="display: flex; gap: 15px;">
+                <a href="../index.html#contact" class="btn btn-primary">Book Test Ride 📅</a>
+                <a href="https://wa.me/919964946512?text=Quote%20Jupiter110" class="btn btn-whatsapp">WhatsApp 💬</a>
             </div>
         </div>
-        <div class="hero-img-side">
-            <img src="../assets/jupiter110.jpg" alt="Jupiter 110" onerror="this.src='https://placehold.co/800x600?text=New+Jupiter+110'">
-        </div>
+        <div class="hero-img-side"><img src="../assets/jupiter110.jpg" alt="Jupiter 110" onerror="this.src='https://placehold.co/800x600?text=Jupiter+110'"></div>
     </div>
 
-    <div class="spec-bar-dark">
-        <div class="spec-bar-grid">
-            <div class="dark-spec-item"><h4>113cc</h4><p>Engine</p></div>
-            <div class="dark-spec-item"><h4>iGO</h4><p>Assist Tech</p></div>
-            <div class="dark-spec-item"><h4>Start</h4><p>Silent Start</p></div>
-            <div class="dark-spec-item"><h4>LED</h4><p>Infinity Lamp</p></div>
-        </div>
+    <div class="spec-grid">
+        <div class="spec-box"><h3>113.3 cc</h3><p>Engine</p></div>
+        <div class="spec-box"><h3>iGO</h3><p>Assist Tech</p></div>
+        <div class="spec-box"><h3>Start</h3><p>Silent Start</p></div>
+        <div class="spec-box"><h3>Metal</h3><p>Body</p></div>
     </div>
 
-    <div class="feature-section container">
-        <div class="feature-row">
-            <div class="feature-txt">
-                <h3>iGO Assist Technology</h3>
-                <p>Get an extra boost of power when overtaking. The integrated starter generator (ISG) battery assists the engine for smoother acceleration.</p>
+    <section class="info-section bg-light">
+        <div class="container">
+            <div class="section-header text-center" style="margin-bottom:50px;"><h2>Key Features</h2></div>
+            <div class="info-grid">
+                <div class="feature-card"><h4>iGO Assist</h4><p>Integrated starter generator (ISG) gives an extra power boost for overtaking.</p></div>
+                <div class="feature-card"><h4>Front Fuel Fill</h4><p>External fuel filling for maximum convenience at petrol pumps.</p></div>
+                <div class="feature-card"><h4>Largest Boot Space</h4><p>Enough space to carry two helmets or your daily groceries.</p></div>
             </div>
-            <div class="feature-img"><img src="../assets/jupiter_igo.jpg" alt="iGO Assist" onerror="this.src='https://placehold.co/600x400?text=iGO+Technology'"></div>
         </div>
-        <div class="feature-row">
-            <div class="feature-txt">
-                <h3>Front Fuel Fill</h3>
-                <p>No need to get off the scooter at petrol pumps. The external front fuel filler offers maximum convenience.</p>
-            </div>
-            <div class="feature-img"><img src="../assets/jupiter_fuel.jpg" alt="Front Fuel" onerror="this.src='https://placehold.co/600x400?text=Front+Fuel+Fill'"></div>
-        </div>
-    </div>
-    
-    <div class="section-padding bg-light text-center">
-        <h2 style="margin-bottom: 20px;">Upgrade Your Ride</h2>
-        <a href="https://wa.me/919964946512?text=Get%20Quote%20Jupiter" class="btn btn-whatsapp">Get On-Road Price 💬</a>
-    </div>
+    </section>
 
     <footer class="footer"><div class="container text-center"><p>&copy; 2025 Tirumala TVS.</p></div></footer>
-    <script>function toggleMenu() { document.getElementById("navMenu").classList.toggle("active"); }</script>
 </body>
 </html>
