--- a/models/jupiter125.html
+++ b/models/jupiter125.html
@@ -4,67 +4,41 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TVS Jupiter 125 | Tirumala TVS</title>
+    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;500;700&family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
-
-    <nav class="nav-container">
-        <a href="../index.html" class="logo"><h1>Tirumala <span>TVS</span></h1></a>
-        <div class="nav-links">
-            <a href="../index.html">Home</a>
-            <a href="../models.html">Inventory</a>
-            <a href="../contacts.html" style="color: var(--tvs-red);">Book Test Ride</a>
+    <header class="main-header">
+        <div class="container header-top">
+            <a href="../index.html" class="logo">Tirumala <span>TVS</span></a>
+            <div class="header-btn-group"><a href="../index.html#contact" class="btn-header">Get Quote</a></div>
         </div>
-    </nav>
+        <div class="nav-bar">
+            <div class="container"><ul class="nav-menu"><li class="nav-item"><a href="../index.html">Home</a></li><li class="nav-item"><a href="../models.html">Inventory</a></li><li class="nav-item"><a href="../index.html#contact">Contact</a></li></ul></div>
+        </div>
+    </header>
 
-    <section class="model-hero">
-        <div class="hero-text">
-            <span class="hero-tag" style="background: var(--tvs-blue);">PREMIUM SCOOTER</span>
-            <h1>TVS Jupiter 125</h1>
-            <h3>Zyada Se Bhi Zyada</h3>
-            <p>
-                The ultimate upgrade. Offering the largest under-seat storage in the industry (fits 2 helmets), 
-                progressive styling, and superior comfort with the longest seat in the segment.
-            </p>
-            <div class="hero-btns">
-                <a href="../contacts.html" class="btn-primary">📅 Book Test Ride</a>
-                <a href="https://wa.me/919964946512" class="btn-secondary">💬 WhatsApp</a>
+    <div class="model-hero">
+        <div class="hero-text-side">
+            <span class="model-tag">ZYADA SE BHI ZYADA</span>
+            <h1 class="model-title">Jupiter 125</h1>
+            <p style="font-size: 1.1rem; color: #555;">Progressive Neo Masculine Styling with biggest under-seat storage in segment.</p>
+            <div class="model-price">₹ 86,000* <br><span>(Ex-Showroom Price)</span></div>
+            <div style="display: flex; gap: 15px;">
+                <a href="../index.html#contact" class="btn btn-primary">Book Test Ride 📅</a>
+                <a href="https://wa.me/919964946512?text=Quote%20Jupiter125" class="btn btn-whatsapp">WhatsApp 💬</a>
             </div>
         </div>
-        <div class="hero-image">
-            <img src="../assets/jupiter125.jpg" alt="TVS Jupiter 125" onerror="this.src='https://placehold.co/800x600?text=Jupiter+125'">
-        </div>
-    </section>
-
-    <div class="stats-bar">
-        <div class="stat-box"><h4>33 L</h4><p>Huge Storage</p></div>
-        <div class="stat-box"><h4>125 cc</h4><p>Engine</p></div>
-        <div class="stat-box"><h4>Metal</h4><p>Body</p></div>
-        <div class="stat-box"><h4>6.0 kW</h4><p>Power</p></div>
+        <div class="hero-img-side"><img src="../assets/jupiter125.jpg" alt="Jupiter 125" onerror="this.src='https://placehold.co/800x600?text=Jupiter+125'"></div>
     </div>
 
-    <section class="info-section">
-        <div class="section-head"><h2>Grand Features</h2></div>
-        <div class="features-grid">
-            <div class="feature-card"><span class="feature-icon">🪖</span><h4>2 Helmet Storage</h4><p>Innovative chassis design creates a massive 33L space under the seat.</p></div>
-            <div class="feature-card"><span class="feature-icon">⛽</span><h4>Front Fuel Fill</h4><p>Fuel tank is moved to the floorboard for better balance and ease of filling.</p></div>
-            <div class="feature-card"><span class="feature-icon">🛋</span><h4>Longest Seat</h4><p>790mm long seat ensures maximum comfort for rider and pillion.</p></div>
-            <div class="feature-card"><span class="feature-icon">🛑</span><h4>Metal Body</h4><p>Strong metal body for durability and a premium feel.</p></div>
-        </div>
-    </section>
+    <div class="spec-grid">
+        <div class="spec-box"><h3>124.8 cc</h3><p>Engine</p></div>
+        <div class="spec-box"><h3>33L</h3><p>Storage</p></div>
+        <div class="spec-box"><h3>50 kmpl</h3><p>Mileage</p></div>
+        <div class="spec-box"><h3>Metal</h3><p>Body</p></div>
+    </div>
 
-    <section class="info-section" style="background-color: #f9f9f9;">
-        <div class="section-head"><h2>Technical Specifications</h2></div>
-        <div class="specs-container">
-            <div class="spec-row"><div class="spec-key">Engine</div><div class="spec-val">124.8 cc, Single Cylinder, 3 Valve</div></div>
-            <div class="spec-row"><div class="spec-key">Power</div><div class="spec-val">6.0 kW @ 6500 rpm</div></div>
-            <div class="spec-row"><div class="spec-key">Torque</div><div class="spec-val">10.5 Nm @ 4500 rpm</div></div>
-            <div class="spec-row"><div class="spec-key">Suspension</div><div class="spec-val">Gas Charged Rear Shock (Adjustable)</div></div>
-            <div class="spec-row"><div class="spec-key">Fuel Tank</div><div class="spec-val">5.1 Liters</div></div>
-            <div class="spec-row"><div class="spec-key">Weight</div><div class="spec-val">108 kg</div></div>
-        </div>
-    </section>
-
-    <footer><p>&copy; 2024 Tirumala TVS Bidarahalli.</p></footer>
+    <footer class="footer"><div class="container text-center"><p>&copy; 2025 Tirumala TVS.</p></div></footer>
 </body>
 </html>
